# projeto_datawarehouse_do_zero

./: .user.yml  README.md  pyproject.toml  requirements.txt
app/: app.py
datawarehouse/docs/: homepage.md
datawarehouse/models/: schema.yml
datawarehouse/models/staging/: stg_commodities.sql  stg_movimentacao_commodities.sql
datawarehouse/seeds/: movimentacao_commodities.csv
projeto_dw_do_zero/: dbt_project.yml
src/: extract_load.py
