[tool.poetry]
name = "projeto-dw-do-zero"
version = "0.1.0"
description = ""
authors = ["oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
yfinance = "^0.2.40"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
